# Terminus

./: Cargo.toml  example  tmp.txt
.config/: command.json  keybind.default.json  keybind.write.json
src/: action.rs  editor.rs  event.rs  main.rs  terminal.rs
src/widget/: command_line.rs  line_number.rs  mod.rs  no_event.rs  panel.rs  popup.rs  status_bar.rs  widget.rs
