[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
crossterm = "0.27.0"
once_cell = "1.18.0"
regex = "1.10.3"
ropey = "1.6.1"
serde = "1.0.190"
syntect = "5.1.0"
tokio = "1.33.0"
